tests/fixtures/invalid/min_int_none.py
# Cannot call min() with Int, None
x = min(1, None)
